tests/NormalTests/paczka1/small_fuzzy/57671051.err
Error in line 7: cjTkzOlQOZx S 0  98,9
Error in line 1: vr3mTT8foHR A105 16,8
Error in line 13: cjTkzOlQOZx S101 286,8
Error in line 6: zq7R7Q115 S788 75,6
